<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.catpudding.pudding_keep_account.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_user"
            app:destination="@id/navigation_user"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.catpudding.pudding_keep_account.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.catpudding.pudding_keep_account.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.catpudding.pudding_keep_account.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/user_fragment">
        <action
            android:id="@+id/action_navigation_user_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out" />
    </fragment>
</navigation>